--- a/i3/polybar/config.ini
+++ b/i3/polybar/config.ini
@@ -165,7 +165,7 @@ type = internal/date
 interval = 1
 
 date-alt = %H:%M
-date = %d-%m %H:%M:%S
+date = %d-%m | %H:%M
 
 label = %date%
 label-foreground = ${colors.primary}
@@ -174,4 +174,3 @@ label-foreground = ${colors.primary}
 screenchange-reload = true
 pseudo-transparency = true
 
-; vim:ft=dosini
