Added almost complete configuration.nix

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -26,21 +26,35 @@
 monitor=,preferred,auto,auto
 
 input {
-    repeat_delay = 190        # delay before repeating starts (ms)
-    repeat_rate = 50          # characters per second
+    repeat_delay = 250        # delay before repeating starts (ms)
+    repeat_rate = 31          # characters per second
 }
 
 ###################
 ### MY PROGRAMS ###
 ###################
 
+cursor {
+    # Hides the cursor after 3 seconds of inactivity.
+    # Set to a very small non-zero value like 0.0001 to hide it almost instantly.
+    inactive_timeout = 3
+      no_hardware_cursors = true
+    
+    # Or set to hide almost instantly:
+    # inactive_timeout = 0.0001 
+}
+# 2. NVIDIA Synchronization Fix
+render {
+    # '2' forces explicit sync for everything, often fixing NVIDIA issues
+    explicit_sync = 2 
+    # explicit_sync_kms = 0 # Can sometimes help as well
+}
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
 $terminal = wezterm
 $fileManager = dolphin
 $menu = wofi --show drun
-
 
 #################
 ### AUTOSTART ###
@@ -60,8 +74,9 @@ exec-once = waybar & hyprpaper & google-chrome
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_THEME, Bibata-Modern-Ice
-env = XCURSOR_SIZE,25
+###################
+### CURSOR ###
+###################
 # env = HYPRCURSOR_SIZE,24
 
 
@@ -187,8 +202,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+  force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+  disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
