--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,2 +1,3 @@
 preload = /home/julien/Wallpapers/corgi-succeed.jpg
+wallpaper = DP-1, /home/julien/Wallpapers/corgi-succeed.jpg
 wallpaper = HDMI-A-1, /home/julien/Wallpapers/corgi-succeed.jpg
